pom.xml added matheclipse-gpl
- distinguish between LGPL and GPL by maven module

--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -13,6 +13,15 @@
 	<artifactId>matheclipse-api</artifactId>
 	<packaging>jar</packaging>
 
+	<licenses>
+		<license>
+			<name>GNU General Public License, Version 3</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+			<distribution>repo</distribution>
+			<comments>A free, copyleft license for software and other kinds of works</comments>
+		</license>
+	</licenses>
+	
 	<profiles>
 		<profile>
 			<id>release</id>
