--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.matheclipse</groupId>
 		<artifactId>matheclipse</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>matheclipse-api</artifactId>
@@ -95,7 +95,7 @@
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${symja.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.undertow</groupId>
