--- a/symja_android_library/matheclipse-beakerx/pom.xml
+++ b/symja_android_library/matheclipse-beakerx/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.matheclipse</groupId>
 		<artifactId>matheclipse</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>matheclipse-beakerx</artifactId>
@@ -73,7 +73,7 @@
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-io</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${symja.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.twosigma</groupId>
