--- a/symja_android_library/matheclipse-gpl/pom.xml
+++ b/symja_android_library/matheclipse-gpl/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.matheclipse</groupId>
 		<artifactId>matheclipse</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>matheclipse-gpl</artifactId>
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.matheclipse</groupId>
 			<artifactId>matheclipse-core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${symja.version}</version>
 		</dependency>
 	</dependencies>
 	
