--- a/symja_android_library/.classpath
+++ b/symja_android_library/.classpath
@@ -31,7 +31,6 @@
 	<classpathentry kind="lib" path="lib/failureaccess-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/geodesy-1.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.25.jar"/>
-	<classpathentry kind="lib" path="lib/apfloat-1.10.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/unbescape-1.1.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/classgraph-4.8.60.jar"/>
 	<classpathentry kind="lib" path="lib/univocity-parsers-2.8.4.jar"/>
@@ -86,5 +85,6 @@
 	<classpathentry kind="lib" path="lib/commons-compiler-3.1.4.jar"/>
 	<classpathentry kind="lib" path="lib/commonmark-0.17.2.jar"/>
 	<classpathentry kind="lib" path="lib/commonmark-ext-gfm-tables-0.17.2.jar"/>
+	<classpathentry kind="lib" path="lib/apfloat-1.10.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
