--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,16 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: mvn -B package --file symja_android_library/pom.xml
+      run: mvn --batch-mode --update-snapshots verify --file symja_android_library/pom.xml
+      run: mkdir staging && cp target/*.jar staging
+      uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: staging
