Add eclipse-config files to .gitignore and unify gitignore files (#228)
Furthermore remove Eclipse's .project files from git. They are generated
by Eclipse if the module is imported.

--- a/symja_android_library/.gitignore
+++ b/symja_android_library/.gitignore
@@ -1,8 +1,15 @@
-proguard.map
-/bin
-/build
+# build artifacts
+bin/
+build/
+target/
+
+# Eclipse configuration files
+.project
+.classpath
+.settings/
+
+#misc
 /js
 /matheclipse-aar/
 /dump/
-/.classpath
-/.settings/
+proguard.map
