[Workflow] fix collection of packaged/deployed jar files
Each run step starts an own shell process, therefore the command
"shopt -s globstar" needs to run in the same shell were it is required.
See github actions doc:
https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepsrun

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,11 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2 
     - run: mvn --batch-mode --update-snapshots verify --file symja_android_library/pom.xml
-    - run: shopt -s globstar
-    - run: mkdir staging && cp **/target/*.jar staging
+    - name: Collect deployed artifacts
+      run: |
+        shopt -s globstar # enable use of double asterisks for multi-directory matches
+        mkdir staging
+        cp **/target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
         name: Package
