--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -256,7 +256,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.10.1-SNAPSHOT</version>
+				<version>1.10.1-20210528.164420-2</version>
 			</dependency>
 
 			<dependency>
@@ -286,43 +286,43 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200233-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-core</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200156-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200242-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200229-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200217-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200223-32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-stat</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<version>2.0-20210614.200203-32</version>
 			</dependency>
 
 			<dependency>
