--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>org.matheclipse</groupId>
 	<artifactId>matheclipse</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
 	<description>Symja Java Symbolic Math library.</description>
 	<url>https://github.com/axkr/symja_android_library.git</url>
-
-	<developers>
-		<developer>
-			<id>axelclk</id>
-			<name>Axel Kramer</name>
-		</developer>
-	</developers>
 
 	<licenses>
 		<license>
@@ -32,6 +27,23 @@
 		</license>
 	</licenses>
 
+	<developers>
+		<developer>
+			<id>axelclk</id>
+			<name>Axel Kramer</name>
+		</developer>
+	</developers>
+
+	<modules>
+		<module>matheclipse-external</module>
+		<module>matheclipse-frontend</module>
+		<module>matheclipse-core</module>
+		<module>matheclipse-gpl</module>
+		<module>matheclipse-api</module>
+		<module>matheclipse-io</module>
+		<module>matheclipse-beakerx</module>
+	</modules>
+
 	<scm>
 		<connection>scm:git:git://github.com/axkr/symja_android_library.git</connection>
 		<developerConnection>scm:git:git@github.com:axkr/symja_android_library.git</developerConnection>
@@ -44,6 +56,18 @@
 		<url>https://github.com/axkr/symja_android_library/issues</url>
 	</issueManagement>
 
+	<distributionManagement>
+		<repository>
+			<id>sonatype-oss-staging</id>
+			<url>https://oss.sonatype.org/content/repositories/staging</url>
+		</repository>
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>sonatype-oss-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -55,37 +79,21 @@
 		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 	</properties>
 
-	<modules>
-		<module>matheclipse-external</module>
-		<module>matheclipse-frontend</module>
-		<module>matheclipse-core</module>
-		<module>matheclipse-gpl</module>
-		<module>matheclipse-api</module>
-		<module>matheclipse-io</module>
-		<module>matheclipse-beakerx</module>
-
-	</modules>
+	<repositories>
+		<repository>
+			<id>orekit</id>
+			<url>https://packages.orekit.org/repository/maven-public/</url>
+		</repository>
+		<repository>
+			<id>sonatype</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.1.0</version>
-					<configuration>
-						<nonFilteredFileExtensions>
-							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
-							<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
-							<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
-							<nonFilteredFileExtension>eot</nonFilteredFileExtension>
-							<nonFilteredFileExtension>otf</nonFilteredFileExtension>
-							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
-							<nonFilteredFileExtension>swf</nonFilteredFileExtension>
-							<nonFilteredFileExtension>ico</nonFilteredFileExtension>
-						</nonFilteredFileExtensions>
-					</configuration>
-				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -98,19 +106,12 @@
 						</compilerArguments>
 					</configuration>
 				</plugin>
+
 				<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
 					<version>3.1</version> <configuration> <source>1.9</source> <target>1.9</target> 
 					<verbose>true</verbose> <fork>true</fork> <executable>C:\Program Files\RedHat\java-1.9.0-openjdk-1.9.0.0-1\bin\javac</executable> 
 					<compilerVersion>1.3</compilerVersion> <encoding>UTF-8</encoding> </configuration> 
 					</plugin> -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.5.3</version>
-					<configuration>
-						<tagNameFormat>@{project.version}</tagNameFormat>
-					</configuration>
-				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -132,6 +133,42 @@
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5.3</version>
+					<configuration>
+						<tagNameFormat>@{project.version}</tagNameFormat>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.1.0</version>
+					<configuration>
+						<nonFilteredFileExtensions>
+							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
+							<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+							<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
+							<nonFilteredFileExtension>eot</nonFilteredFileExtension>
+							<nonFilteredFileExtension>otf</nonFilteredFileExtension>
+							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
+							<nonFilteredFileExtension>swf</nonFilteredFileExtension>
+							<nonFilteredFileExtension>ico</nonFilteredFileExtension>
+						</nonFilteredFileExtensions>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-scm-plugin</artifactId>
+					<version>1.9.4</version>
+					<configuration>
+						<connectionType>developerConnection</connectionType>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
 					<version>3.0.1</version>
 					<executions>
@@ -142,15 +179,6 @@
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.9.4</version>
-					<configuration>
-						<connectionType>developerConnection</connectionType>
-					</configuration>
 				</plugin>
 
 				<plugin>
@@ -168,28 +196,18 @@
 					<version>2.7.0</version> <configuration> <to> <image>servletserver</image> 
 					</to> <container> <mainClass>org.matheclipse.io.servlet.ServletServer</mainClass> 
 					</container> </configuration> </plugin> -->
+
 			</plugins>
 		</pluginManagement>
 	</build>
 
-	<distributionManagement>
-		<repository>
-			<id>sonatype-oss-staging</id>
-			<url>https://oss.sonatype.org/content/repositories/staging</url>
-		</repository>
-
-		<snapshotRepository>
-			<id>sonatype-oss-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<profiles>
+
 		<profile>
 			<id>release</id>
 			<build>
 				<plugins>
+
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
@@ -197,20 +215,23 @@
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
-								<phase>verify</phase>
 								<goals>
 									<goal>sign</goal>
 								</goals>
+								<phase>verify</phase>
 							</execution>
 						</executions>
 					</plugin>
+
 				</plugins>
 			</build>
 		</profile>
+
 		<profile>
 			<id>fixerrors</id>
 			<build>
 				<plugins>
+
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
@@ -221,21 +242,10 @@
 							</compilerArgs>
 						</configuration>
 					</plugin>
+
 				</plugins>
 			</build>
 		</profile>
+
 	</profiles>
-
-	<repositories>
-		<repository>
-			<id>orekit</id>
-			<url>https://packages.orekit.org/repository/maven-public/</url>
-		</repository>
-		<repository>
-			<id>sonatype</id>
-			<url>https://oss.sonatype.org/content/groups/public/</url>
-		</repository>
-
-	</repositories>
-
 </project>
