[Build] improve plug-in management and update plug-in versions (#193)
- Remove resource filtering where no resources are filtered at all or
where the resources did not contain any replaceable variables. Which in
the end were all occurrences.

- Make explicit call of maven-compiler-plugin in the root pom.xml, which
is implicitly called anyways and remove it from child poms.

--- a/symja_android_library/matheclipse-gpl/pom.xml
+++ b/symja_android_library/matheclipse-gpl/pom.xml
@@ -33,16 +33,11 @@
 	</dependencies>
 
 	<build>
-		<resources>
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/resources</directory>
-			</resource>
-		</resources>
 		<pluginManagement>
 			<plugins>
 
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<configuration>
 						<descriptorRefs>
