--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -70,13 +70,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>8</java.version>
 		<symja.version>2.0.0-SNAPSHOT</symja.version>
 		<hipparchus.version>2.0-SNAPSHOT</hipparchus.version>
-		<timestamp>${maven.build.timestamp}</timestamp>
-		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 	</properties>
 
 	<repositories>
@@ -96,29 +92,28 @@
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-						<compilerArguments>
-							<endorseddirs>${endorsed.dir}</endorseddirs>
-						</compilerArguments>
-					</configuration>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.3.0</version>
 				</plugin>
 
-				<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
-					<version>3.1</version> <configuration> <source>1.9</source> <target>1.9</target> 
-					<verbose>true</verbose> <fork>true</fork> <executable>C:\Program Files\RedHat\java-1.9.0-openjdk-1.9.0.0-1\bin\javac</executable> 
-					<compilerVersion>1.3</compilerVersion> <encoding>UTF-8</encoding> </configuration> 
-					</plugin> -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.10.3</version>
+					<version>3.3.0</version>
 					<configuration>
-						<additionalparam>-Xdoclint:none</additionalparam>
+						<doclint>none</doclint>
 						<failOnError>false</failOnError>
 					</configuration>
 					<executions>
@@ -143,7 +138,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.2.0</version>
 					<configuration>
 						<nonFilteredFileExtensions>
 							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
@@ -161,7 +156,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.9.4</version>
+					<version>1.11.2</version>
 					<configuration>
 						<connectionType>developerConnection</connectionType>
 					</configuration>
@@ -170,7 +165,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.2.1</version>
 					<executions>
 						<execution>
 							<id>attach-sources</id>
@@ -182,9 +177,15 @@
 				</plugin>
 
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>3.0.0</version>
+				</plugin>
+
+				<plugin>
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>1.6.6</version>
+					<version>1.6.8</version>
 					<extensions>true</extensions>
 					<configuration>
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
@@ -199,6 +200,19 @@
 
 			</plugins>
 		</pluginManagement>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+
+		</plugins>
 	</build>
 
 	<profiles>
@@ -211,7 +225,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
