[Build] improve dependency management (#193)
- versions of each dependency is now managed in the dependencyManagement
section of the root pom.xml
	- this ensures consistent versions throughout the library

- Add JUnit 5 test-dependency (plus Vintage for Junit4) for all modules
in test scope

--- a/symja_android_library/matheclipse-gpl/pom.xml
+++ b/symja_android_library/matheclipse-gpl/pom.xml
@@ -25,9 +25,9 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.matheclipse</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-core</artifactId>
-			<version>${symja.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 	</dependencies>
