--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -25,40 +25,29 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.matheclipse</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-core</artifactId>
-			<version>${symja.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.undertow</groupId>
 			<artifactId>undertow-core</artifactId>
-			<version>2.1.0.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>8.5.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>8.5.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.owasp.encoder</groupId>
 			<artifactId>encoder</artifactId>
-			<version>1.2.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
