--- a/symja_android_library/matheclipse-beakerx/pom.xml
+++ b/symja_android_library/matheclipse-beakerx/pom.xml
@@ -25,34 +25,30 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.matheclipse</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-io</artifactId>
-			<version>${symja.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.twosigma</groupId>
 			<artifactId>beakerx</artifactId>
-			<version>1.3.0</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.twosigma.beakerx</groupId>
 			<artifactId>beaker-kernel-base</artifactId>
-			<version>1.3.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.javalin</groupId>
 			<artifactId>javalin</artifactId>
-			<version>1.7.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
 		</dependency>
 
 	</dependencies>
